--- a/attandance/src/main/resources/templates/attendees/excuseForm.html
+++ b/attandance/src/main/resources/templates/attendees/excuseForm.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Omluvenka</title>
-    <link rel="stylesheet" href="../static/css/profile.css" th:href="@{/css/profile.css}">
+    <link rel="stylesheet" href="../static/css/registration.css" th:href="@{/css/registration.css}">
 </head>
 <body>
 <div th:include="layout.html"></div>
