--- a/attandance/src/main/resources/templates/exhibition/form.html
+++ b/attandance/src/main/resources/templates/exhibition/form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Vystoupení Formulář</title>
-    <link rel="stylesheet" href="../static/css/exhibition.css" th:href="@{/css/exhibition.css}">
+    <link rel="stylesheet" href="../static/css/registration.css" th:href="@{/css/registration.css}">
 </head>
 <body>
 <div th:include="layout.html"></div>
@@ -11,6 +11,7 @@
     <div class="form">
         <form>
             <div class="form-group">
+                <h1>Přidat akci</h1>
                 <label for="name">Název</label>
                 <input type="text" class="form-control" id="name" placeholder="Jméno" required>
             </div>
