--- a/attandance/src/main/resources/templates/exhibition/index.html
+++ b/attandance/src/main/resources/templates/exhibition/index.html
@@ -8,7 +8,9 @@
 <body>
 <div th:include="layout.html"></div>
 <div class="page-content">
-    <button type="button1" class="basic-btn" id="addAction"><a href="/vystoupeni/add"> Přidat akci</a></button>
+    <div class="btnLayout">
+    <button type="button1" class="btn btn-primary submitForm" id="addAction"><a href="/vystoupeni/add"> Přidat akci</a></button>
+    </div>
     <div id="jsGrid"></div>
     <div class="loader"></div>
 </div>
