--- a/attandance/src/main/resources/templates/attendance/form.html
+++ b/attandance/src/main/resources/templates/attendance/form.html
@@ -11,6 +11,7 @@
     <div class="form">
         <form>
             <div class="form-group">
+                <h1>Přidat trénink</h1>
                 <label for="name">Název</label>
                 <input type="text" class="form-control" id="name" placeholder="A1" required>
             </div>
