--- a/attandance/src/main/resources/templates/attendees/index.html
+++ b/attandance/src/main/resources/templates/attendees/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Uživatelé</title>
-    <link rel="stylesheet" href="../static/css/users.css" th:href="@{/css/users.css}">
+    <link rel="stylesheet" href="../static/css/exhibition.css" th:href="@{/css/exhibition.css}">
 </head>
 <body>
 <div th:include="layout.html"></div>
 <div class="page-content">
-    <!--TODO-->
+    <div class="nadpis">Účastníci</div>
     <div class="loader"></div>
     <div id="jsGrid"></div>
 </div>
