--- a/attandance/src/main/resources/templates/home/index.html
+++ b/attandance/src/main/resources/templates/home/index.html
@@ -34,7 +34,7 @@
 
             </table>
 
-            <div><input type="submit" value="Sign In"/></div>
+            <div><input type="submit" value="Přihlásit"/></div>
         </form>
         </form>
     </div>
