--- a/attandance/src/main/resources/templates/users/detail.html
+++ b/attandance/src/main/resources/templates/users/detail.html
@@ -10,8 +10,8 @@
 <span> </span>
 
 <div class="page-content">
-    <button type="button1" class="basic-btn editButton"><a href="/edit">Editace</a></button>
-    <button type="button2" class="basic-btn">button2</button>
+    <button type="button1" class="btn btn-primary submitForm"><a href="/edit">Editace</a></button>
+    <button type="button2" class="btn btn-primary submitForm">button2</button>
 
     <div class="nadpis">
     <p>Profil</p>
@@ -51,11 +51,11 @@
         </table>
     </div>
 
-    <div>
-        <!--TODO-->
+    <!--  <div>
+
         <div class="loader"></div>
         <div id="jsGrid1"></div>
-    </div>
+    </div>-->
 
     <div>
         <!--TODO-->
