--- a/attandance/src/main/resources/templates/home/index.html
+++ b/attandance/src/main/resources/templates/home/index.html
@@ -20,7 +20,7 @@
 
             <table>
                 <tr>
-                    <td><p id="username-label">Uživatelské jméno:<p></td>
+                    <td><p id="username-label">Login:<p></td>
                     <td><label><input type="text" name="username"/> </label></td>
                 </tr>
                 <tr>
@@ -34,7 +34,7 @@
 
             </table>
 
-            <div><input type="submit" value="Přihlásit"/></div>
+            <div><input type="submit" value="Přihlásit" class="btn btn-primary"/></div>
         </form>
         </form>
     </div>
