--- a/attandance/src/main/resources/templates/users/detail.html
+++ b/attandance/src/main/resources/templates/users/detail.html
@@ -53,11 +53,10 @@
         </table>
     </div>
 
-    <!--  <div>
-
+    <div>
         <div class="loader"></div>
         <div id="jsGrid1"></div>
-    </div>-->
+    </div>
 
     <div>
         <!--TODO-->
