predkonecna verze frontentu

--- a/attandance/src/main/resources/templates/attendance/detail.html
+++ b/attandance/src/main/resources/templates/attendance/detail.html
@@ -9,7 +9,7 @@
 <div th:include="layout.html"></div>
 <div class="page-content">
 
-    <div class="nadpis">Účastníci</div>
+    <div class="nadpis">Účastníci tréninku</div>
     <div class="table-content">
 
         <table class="horniTabulka">
