--- a/attandance/src/main/resources/templates/exhibition/detail.html
+++ b/attandance/src/main/resources/templates/exhibition/detail.html
@@ -8,8 +8,8 @@
 <body>
 <div th:include="layout.html"></div>
 <div class="page-content">
-    <button type="button1" class="basic-btn editButton"><a id="editLink">Editace</a></button>
-    <button type="button1" class="basic-btn deleteButton" style="display: none"><a id="deleteActionLink">Smazat</a></button>
+    <button type="button1" class="btn btn-primary editButton"><a id="editLink">Editovat</a></button>
+    <button type="button1" class="btn btn-primary deleteButton" style="display: none"><a id="deleteActionLink">Smazat</a></button>
     <div>
         <!--TODO Action info-->
         <table class="horniTabulka">
@@ -45,7 +45,7 @@
                     </select>
                 </div>
                 <div class="btnLayout">
-                    <button type="button2" class="btn btn-primary submitForm" id="sendUser"><a id="addUser">Vyhledat</a></button>
+                    <button type="button2" class="btn btn-primary submitForm" id="sendUser"><a id="addUser">Přidat na akci</a></button>
                 </div>
                 <div class="loader"></div>
             </div>
