--- a/attandance/src/main/resources/static/css/attendance.css
+++ b/attandance/src/main/resources/static/css/attendance.css
@@ -1,28 +1,24 @@
-.dateCell {
-    width: 52px;
-}
-.presenceCell {
-    width: 52px;
-    height: 52px;
-    text-align: center;
-}
-
-.presenceCell:hover {
-    background-color: blue;
-}
-
-
-
-td,th {
-    font-weight: normal;
+.page-content{
     padding-left: 1em;
     padding-right: 1em;
-    padding-top: 0.4em;
-    vertical-align: middle;
 }
 
-td {
-    border-top: 2px solid gray;
+.nadpis {
+    font-size: 2.2em;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    color: whitesmoke;
+    padding-bottom: 0.5em;
+    padding-left: 10em;
+    padding-top: 0.5em;
+}
+
+.table-content{
+    margin-left: 17em;
+    font-size: large;
+}
+
+.horniTabulka p{
+    display: inline;
 }
 
 table {
@@ -30,5 +26,43 @@ table {
     border-collapse:separate;
     border-radius:10px;
     margin-bottom: 1em;
+
 }
+
+td,th {
+    font-weight: normal;
+    padding-left: 1.8em;
+    padding-right: 1.8em;
+    vertical-align: bottom;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+}
+
+td {
+    border-top: 3px solid gray;
+}
+
+#attend {
+    display: block;
+    overflow-x: auto;
+    padding-left: 0;
+    border-radius:0;
+}
+
+#attend td, #attend th {
+    border: 3px solid gray;
+    border-radius: 60px;
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
+}
+
+#attend td:hover{
+    border: 3px double yellow;
+}
+
+
+
+
 
