--- a/attandance/src/main/resources/templates/exhibition/form.html
+++ b/attandance/src/main/resources/templates/exhibition/form.html
@@ -48,7 +48,7 @@
                 <input type="text" class="form-control" id="zip" placeholder="50003" required>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-primary submitForm">Odeslat</button>
+                <button type="submit" class="btn btn-primary submitForm"><a href="/vystoupeni"></a>Odeslat</button>
             </div>
         </form>
     </div>
