--- a/attandance/src/main/resources/templates/exhibition/form.html
+++ b/attandance/src/main/resources/templates/exhibition/form.html
@@ -29,7 +29,7 @@
             </div>
             <div class="form-group">
                 <label for="description">Popis</label>
-                <input type="text" class="form-control" id="description" placeholder="605123456" required>
+                <input type="text" class="form-control" id="description" required>
             </div>
             <div class="form-group">
                 <label for="state">Stát</label>
