--- a/attandance/src/main/resources/templates/attendees/detail.html
+++ b/attandance/src/main/resources/templates/attendees/detail.html
@@ -53,6 +53,7 @@
 
     <div>
         <!--TODO-->
+        <h2>Tréninky účastníka</h2>
         <div class="loader"></div>
         <div id="jsGrid"></div>
     </div>
