úprava textů a textových chyb

--- a/attandance/src/main/resources/templates/attendance/form.html
+++ b/attandance/src/main/resources/templates/attendance/form.html
@@ -104,11 +104,11 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="startDate">Začátek</label>
+                <label for="startDate">Datum první lekce</label>
                 <input type="date" class="form-control date-picker-popup" id="startDate" required>
             </div>
             <div class="form-group">
-                <label for="endDate">Konec</label>
+                <label for="endDate">Datum poslední lekce</label>
                 <input type="date" class="form-control date-picker-popup" id="endDate" required>
             </div>
             <div class="form-group">
