--- a/attandance/src/main/resources/templates/users/detail.html
+++ b/attandance/src/main/resources/templates/users/detail.html
@@ -53,15 +53,17 @@
         </table>
     </div>
 
-    <h2>Akce uživatele</h2>
+
     <div>
+        <div class="nadpis"><p>Akce uživatele</p></div>
         <div class="loader"></div>
         <div id="jsGrid1"></div>
     </div>
 
-    <h2>Tréninky uživatele</h2>
+
     <div>
         <!--TODO-->
+        <div class="nadpis"><p>Tréninky uživatele</p></div>
         <div id="jsGrid2"></div>
     </div>
 
