--- a/attandance/src/main/resources/templates/application/index.html
+++ b/attandance/src/main/resources/templates/application/index.html
@@ -8,7 +8,7 @@
 <div th:include="layout.html"></div>
 <div class="page-content">
     <div class="form-group" id="applicationForm">
-        <h1 class="title">Přihláška</h1>
+        <h1 class="nadpis">Přihláška</h1>
         <div class="loader"></div>
         <div id="jsGrid"></div>
     </div>
