--- a/attandance/src/main/resources/templates/application/index.html
+++ b/attandance/src/main/resources/templates/application/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th=" http://www.thymeleaf.org">
 <head>
+    <link rel="stylesheet" href="../static/css/exhibition.css" th:href="@{/css/exhibition.css}">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Přihláška</title>
 </head>
 <body>
 <div th:include="layout.html"></div>
