--- a/attandance/src/main/resources/templates/attendees/excuseForm.html
+++ b/attandance/src/main/resources/templates/attendees/excuseForm.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Omluvenka</title>
     <link rel="stylesheet" href="../static/css/registration.css" th:href="@{/css/registration.css}">
+    <link rel="stylesheet" href="../static/css/exhibition.css" th:href="@{/css/exhibition.css}">
 </head>
 <body>
 <div th:include="layout.html"></div>
@@ -11,9 +12,8 @@
 
 <div class="page-content">
 
-    <div class="nadpis">
-        <p>Omluvenka</p>
-    </div>
+    <div class="nadpis">Omluvenka</div>
+
     <form>
         <div class="form-group" id="dateSelect">
             <label for="date">Datum</label>
